// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mosaic> Snapshots and structure should render story clickableThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/200"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/210"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/220"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/230"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story fourThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/200"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/210"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/220"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/230"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story fourVerticalThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/150"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/160"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/170"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/180"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story oneThumbnail 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-1-thumbnail"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/200"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story oneVerticalThumbnail 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-1-thumbnail"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/150"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story sixThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/640/480/?image=24"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/640/480/?image=25"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/640/480/?image=26"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/640/480/?image=27"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        tabIndex="0"
        theme="light"
      />
      <div
        className="lumx-mosaic__overlay"
      >
        <span>
          +
          2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story threeThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-3-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/200"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/210"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/220"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story threeVerticalThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-3-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/150"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/160"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/170"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story twoThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-2-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/200"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/210"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story twoVerticalThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-2-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="0"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/150"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail lumx-mosaic__thumbnail--is-contain-mode"
      key="1"
    >
      <Thumbnail
        aspectRatio="free"
        fillHeight={true}
        image="https://picsum.photos/100/160"
        imgProps={
          Object {
            "onLoad": [Function],
          }
        }
        onClick={[Function]}
        theme="light"
      />
    </div>
  </div>
</div>
`;
